--- a/app/globals.css
+++ b/app/globals.css
@@ -76,7 +76,7 @@
 }
 
 .auth {
-  @apply flex-center min-h-screen w-full bg-purple-100
+  @apply flex-center min-h-screen w-full bg-gradient-to-r from-[#84CEEB] to-[#C1C8E4]
 }
 
 .root {
